# ZCode-supervisor

./: .gitignore  CHANGELOG.md  LICENSE  README.ja.md  README.md  ROADMAP.md  SECURITY.md  package.json  pyproject.toml
.github/workflows/: homebrew-release-validation.yml  pypi-publish.yml  release-artifacts.yml  zcode-release-monitor.yml
benchmarks/claude-glm-ledger/: README.md  package.json
benchmarks/zcode-auto-ledger/: README.md  package.json
benchmarks/zcode-goal-mode/: AGENTS.md  README.md  package.json
config/: zcode-release-baseline.json
docs/: distribution.md  glm-5.2-zcode-operator-guide.ja.md  glm-5.2-zcode-operator-guide.md  pypi-trusted-publisher.md  release-homebrew.md
packaging/homebrew/: zcode-supervisor.rb
scripts/: __init__.py  check-pypi-release-readiness  check.sh  update-homebrew-formula  verify-python-wheel  verify_python_wheel_for_tests.py  zcode-auto-route  zcode-install-repo
skills/zcode-delegation-eval/: SKILL.md
skills/zcode-master-operator/: SKILL.md
templates/zcode-codex-system/: AGENTS.md  GLM52_PLAYBOOK.md  PARALLEL_PLAYBOOK.md  QUALITY_GATE.md  README.md
tests/: test_distribution_packaging.py  test_homebrew_formula.py  test_pypi_readiness.py  test_zcode_eval.py  test_zcode_release.py  test_zcode_repo_setup.py  test_zcode_supervisor.py  zcode_provider_errors.test.mjs  zcode_run_packet_e2e.test.mjs
tools/: __init__.py
tools/zcode_control/: __init__.py  browser_scripts.mjs  provider_errors.mjs  zcodectl.mjs
tools/zcode_eval/: __init__.py  duel_import.py  pypi_readiness.py  zcode_eval.py  zcode_release.py
(+15 files in other folders)
